# wayle

./: .gitignore  README.md  pyproject.toml  wayle.tera
.github/workflows/: release.yml
cli/: pyproject.toml
cli/src/cli/: cli_helpers.py  config.py  config_manager.py  main.py  palette_utils.py  recommended.py
release/: wayle_ctp-0.1.0-py3-none-any.whl
release/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml
src/cli/: cli_helpers.py  config.py  main.py
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml
themes/frappe/: catppuccin-frappe-blue.toml  catppuccin-frappe-flamingo.toml  catppuccin-frappe-green.toml  catppuccin-frappe-lavender.toml  catppuccin-frappe-maroon.toml  catppuccin-frappe-mauve.toml  catppuccin-frappe-peach.toml  catppuccin-frappe-pink.toml  catppuccin-frappe-red.toml  catppuccin-frappe-rosewater.toml  catppuccin-frappe-sapphire.toml  catppuccin-frappe-sky.toml  catppuccin-frappe-teal.toml  catppuccin-frappe-yellow.toml
themes/latte/: catppuccin-latte-blue.toml  catppuccin-latte-flamingo.toml  catppuccin-latte-green.toml  catppuccin-latte-lavender.toml  catppuccin-latte-maroon.toml  catppuccin-latte-mauve.toml  catppuccin-latte-peach.toml  catppuccin-latte-pink.toml  catppuccin-latte-red.toml  catppuccin-latte-rosewater.toml  catppuccin-latte-sapphire.toml  catppuccin-latte-sky.toml  catppuccin-latte-teal.toml  catppuccin-latte-yellow.toml
themes/macchiato/: catppuccin-macchiato-blue.toml  catppuccin-macchiato-flamingo.toml  catppuccin-macchiato-green.toml  catppuccin-macchiato-lavender.toml  catppuccin-macchiato-maroon.toml  catppuccin-macchiato-mauve.toml  (+8 more)
(+14 files in other folders)
