[tool.poetry]
name = "wayle-ctp"
version = "0.1.0"
description = ""
authors = ["GaetanQu <gaetan.quenouille.gq@gmail.com>"]
readme = "README.md"

packages = [{include = "cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
catppuccin = ">=2.5.0,<3.0.0"
inquirerpy = ">=0.3.4,<0.4.0"
tomlkit = ">=0.14.0,<0.15.0"

[tool.poetry.scripts]
wayle-ctp = "cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
