[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "GaetanQu",email = "gaetan.quenouille.gq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "catppuccin (>=2.5.0,<3.0.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "rich (>=14.3.3,<15.0.0)",
    "tomlkit (>=0.14.0,<0.15.0)",
]

[tool.poetry]
packages = [{include = "cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
